tests/fixtures/invalid/w012/orphan_ref.spec
ref gh.issue:99 "Unlinked Issue"
